feat(backend): migrate to Java 8 and Spring Boot 2.7.18 - Changed from Spring Boot 3.x to 2.7.18 for Java 8 compatibility - Replaced jakarta.* imports with javax.* (persistence, validation) - Replaced List.of() with Arrays.asList()/Collections.singletonList() - Updated springdoc-openapi to version 1.7.0 - All endpoints verified working (ping, health, espacios)