@@ -8,7 +8,7 @@ import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.List;
+import java.util.Collections;
 
 @Configuration
 public class OpenApiConfig {
@@ -37,6 +37,6 @@ public class OpenApiConfig {
 
         return new OpenAPI()
                 .info(info)
-                .servers(List.of(devServer));
+                .servers(Collections.singletonList(devServer));
     }
 }
